# rust-esp-idf

./: .env  .gitignore  Cargo.toml  LICENSE-MIT  build.rs  cspell.config.yaml  diagram.json  flash.bat  heltec_v2_lora.cfg  readme.md  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: lib.rs  main.rs
src/devices/: button.rs  display.rs  gps.rs  iv.rs  led.rs  lora.rs  lora_p2p.rs  lorawan.rs  mod.rs  sx1276.rs  types.rs  wifi.rs
